<resources>
    <string name="app_name">TTB</string>

    <string name="action_settings">Settings</string>

    <string name="hint_name">Full Name</string>
    <string name="hint_email">User Name</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup">Register Free</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter UserName</string>
    <string name="err_msg_password">Enter the password</string>



    <string name="screen1">Person &amp; Company Detail</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="reenterpassword">Re-enter Password</string>
    <string name="email">Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="company">Company</string>
    <string name="designation">Designation</string>
    <string name="contactno">Contact No</string>
    <string name="mobileno">Mobile No</string>
    <string name="officeno">Office No</string>



    <string name="screen2">Address</string>
    <string name="shop_no">Shop No</string>
    <string name="floor">Floor</string>
    <string name="phase">Phase(Optional)</string>
    <string name="market_name">Market Name</string>
    <string name="road">Road</string>
    <string name="landmark">Landmark</string>
    <string name="area">Area</string>
    <string name="city_town_village">City/Town/Village</string>
    <string name="state">State</string>
    <string name="district">District(Optional)</string>
    <string name="pincode">Pincode</string>


</resources>
