<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linear_back"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/button"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/ic_action_back" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="Register"
                android:textColor="@android:color/white"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_next"
            android:layout_width="70dp"
            android:layout_height="55dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="Next"
                android:textColor="@android:color/white"
                android:textSize="18dp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>


    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_range_1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/round_blue_1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_range_2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/round_blue_2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_range_3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/round_white_3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_range_4"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/round_white_4" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@color/common_action_bar_splitter"></View>

                <TextView
                    android:id="@+id/tv_reg_screen_1_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="center"
                    android:text="@string/screen1"
                    android:textAppearance="?android:attr/textAppearanceMedium"   />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@color/common_action_bar_splitter"></View>

            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                        <EditText
                            android:id="@+id/first_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/first_name"
                            android:theme="@style/Theme.App.Base"
                            android:singleLine="true" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                        <EditText
                            android:id="@+id/last_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/last_name"
                            android:theme="@style/Theme.App.Base"
                            android:singleLine="true" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                        <EditText
                            android:id="@+id/user_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/username"
                            android:theme="@style/Theme.App.Base"
                            android:singleLine="true" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:theme="@style/Theme.App.Base"
                            android:inputType="textPassword"
                            android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                        <EditText
                            android:id="@+id/re_enter_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/reenterpassword"
                            android:theme="@style/Theme.App.Base"
                            android:inputType="textPassword"
                            android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:theme="@style/Theme.App.Base"
                            android:singleLine="true" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_male"
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_design_selected"
                        android:text="@string/male"

                        android:textColor="@android:color/white" />


                    <Button
                        android:id="@+id/btn_female"
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_design"
                        android:text="@string/female"

                        android:textColor="@color/colorPrimary" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:orientation="vertical">


                        <EditText
                            android:id="@+id/company"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/company"
                            android:theme="@style/Theme.App.Base"
                            android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                        <EditText
                            android:id="@+id/designation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/designation"
                            android:theme="@style/Theme.App.Base"
                            android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                        <EditText
                            android:id="@+id/contact_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/contactno"
                            android:theme="@style/Theme.App.Base"
                            android:inputType="number"
                            android:singleLine="true"
                            android:maxLength="10"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:singleLine="true"
                            android:text="+91"
                            android:textStyle="bold" />
                        <EditText
                            android:id="@+id/mobile_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/mobileno"
                            android:theme="@style/Theme.App.Base"
                            android:inputType="number"
                            android:maxLength="10"
                            android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">



                        <EditText
                            android:id="@+id/office_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/officeno"
                            android:inputType="number"
                            android:theme="@style/Theme.App.Base"
                            android:singleLine="true" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>