<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/registration_title" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linear_back">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:background="@drawable/backspace" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:text="Back"
                android:textColor="@android:color/white"
                android:textSize="18dp"
                android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|right"
                    android:orientation="vertical"
                    android:id="@+id/linear_next">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="Next"
                        android:textColor="@android:color/white"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>



    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_range_1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/round_blue_1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_range_2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/round_blue_2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_range_3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/round_white_3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_range_4"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/round_white_4" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:background="@color/common_action_bar_splitter"></View>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/screen2"
                    android:theme="@style/Theme.App.Base"
                    android:gravity="center"
                    android:layout_weight="1.30"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/tv_reg_screen_2_title" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:background="@color/common_action_bar_splitter"></View>

            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"

                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">


                        <EditText
                            android:id="@+id/shop_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/shop_no"
                            android:theme="@style/Theme.App.Base"
                            android:singleLine="true" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                        <EditText
                            android:id="@+id/floor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/floor"
                            android:theme="@style/Theme.App.Base"
                            android:singleLine="true" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                        <EditText
                            android:id="@+id/phase"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phase"
                            android:theme="@style/Theme.App.Base"
                            android:singleLine="true" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">



                        <EditText
                            android:id="@+id/market_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/market_name"

                            android:theme="@style/Theme.App.Base"
                            android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                        <EditText
                            android:id="@+id/road"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/road"

                            android:theme="@style/Theme.App.Base"
                            android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">



                        <EditText
                            android:id="@+id/landmark"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/landmark"
                            android:theme="@style/Theme.App.Base"
                            android:singleLine="true" />
                </LinearLayout>





                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                        <EditText
                            android:id="@+id/area"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/area"
                            android:theme="@style/Theme.App.Base"
                            android:singleLine="true" />
                </LinearLayout>




                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"

                    android:orientation="vertical">


                        <EditText
                            android:id="@+id/city"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/city_town_village"
                            android:theme="@style/Theme.App.Base"
                            android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">



                        <EditText
                            android:id="@+id/state"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/state"
                            android:theme="@style/Theme.App.Base"
                            android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                        <EditText
                            android:id="@+id/district"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/district"
                            android:theme="@style/Theme.App.Base"
                            android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">


                        <EditText
                            android:id="@+id/pincode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/pincode"
                            android:singleLine="true"
                            android:theme="@style/Theme.App.Base"
                            android:inputType="number"
                            android:maxLength="6"/>
                </LinearLayout>



            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>